fix(label): apply overflow to legacy and update skeleton text

--- a/core/src/components/label/label.scss
+++ b/core/src/components/label/label.scss
@@ -19,15 +19,14 @@
 
   text-overflow: ellipsis;
 
-  // Overflow hidden is required for the proper
-  // margins between skeleton text elements
-  // overflow: hidden;
   box-sizing: border-box;
 }
 
 // TODO(FW-5289): remove
 :host-context(.item-legacy) {
   white-space: nowrap;
+
+  overflow: hidden;
 }
 
 // TODO(FW-5289): move to :host-context(.item)
